@@ -1,3 +1,8 @@
+2002-12-13  Don Porter <dgp@users.sf.net>
+
+	* generic/tkMain.c (Tk_Main):  Call on Tcl*StartupScript*() routines
+	to store the startup script, if any.  [Bug 616245].
+
 2002-12-10  David Gravereaux  <davygrvy@pobox.com>
 
 	* win/makefile.vc: tclThreadTest.obj not required to link
